--- a/conf/ad_server.toml
+++ b/conf/ad_server.toml
@@ -1,5 +1,8 @@
+# ip字典
 GeoBlockFileName = "./data/GeoLiteCity-Blocks.csv"
 GeoLocationFileName = "./data/GeoLiteCity-Location.csv"
+
+# 广告字典
 AdFileName = "./data/ad_info.txt"
 
 # 1:debug 2:info 3:warn 4:error 5:fatal
@@ -8,3 +11,7 @@ AdServerLogFileName = "./log/ad_server.log"
 SearchLogFileName = "./log/ad_search.log"
 ImpressionLogFileName = "./log/ad_impression.log"
 ClickLogFileName = "./log/ad_click.log"
+
+# track url
+ImpressionTrackUrlPrefix = "http://localhost:8001/ad/impression"
+ClickTrackUrlPrefix = "http://localhost:8001/ad/click"
