--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/wenweihu86/ad-server
 import:
 - package: github.com/ibbd-dev/go-async-log
-- package: github.com/satori/go.uuid
+- package: github.com/google/uuid
 - package: github.com/spf13/viper
 - package: golang.org/x/sys
   subpackages:
